--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">GraduationDemo</string>
+    <string name="app_name">ER 123</string>
     <string name="title_activity_maps">Map</string>
+    <string-array name="international_code">
+        <item>0020</item>
+        <item>0010</item>
+    </string-array>
 </resources>
