Ability to choose different locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
         <item>0020</item>
         <item>0010</item>
     </string-array>
+    <string name="title_activity_first_aid">FirstAid</string>
 </resources>
