--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ER 123</string>
+    <string name="app_name">EED User</string>
     <string name="title_activity_maps">Map</string>
     <string-array name="international_code">
         <item>0020</item>
